; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_mmu.c_detect_write_misaligned.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_mmu.c_detect_write_misaligned.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_mmu_page = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32 }

@.str = private unnamed_addr constant [39 x i8] c"misaligned: gpa %llx bytes %d role %x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm_mmu_page*, i32, i32)* @detect_write_misaligned to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @detect_write_misaligned(%struct.kvm_mmu_page* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.kvm_mmu_page*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.kvm_mmu_page* %0, %struct.kvm_mmu_page** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load %struct.kvm_mmu_page*, %struct.kvm_mmu_page** %5, align 8
  %14 = getelementptr inbounds %struct.kvm_mmu_page, %struct.kvm_mmu_page* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @pgprintk(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %16)
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @offset_in_page(i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load %struct.kvm_mmu_page*, %struct.kvm_mmu_page** %5, align 8
  %21 = getelementptr inbounds %struct.kvm_mmu_page, %struct.kvm_mmu_page* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ne i64 %23, 0
  %25 = zext i1 %24 to i64
  %26 = select i1 %24, i32 8, i32 4
  store i32 %26, i32* %9, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = sub i32 %28, 1
  %30 = and i32 %27, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %36, label %32

32:                                               ; preds = %3
  %33 = load i32, i32* %7, align 4
  %34 = icmp eq i32 %33, 1
  br i1 %34, label %35, label %36

35:                                               ; preds = %32
  store i32 0, i32* %4, align 4
  br label %53

36:                                               ; preds = %32, %3
  %37 = load i32, i32* %8, align 4
  %38 = load i32, i32* %8, align 4
  %39 = load i32, i32* %7, align 4
  %40 = add i32 %38, %39
  %41 = sub i32 %40, 1
  %42 = xor i32 %37, %41
  %43 = load i32, i32* %9, align 4
  %44 = sub i32 %43, 1
  %45 = xor i32 %44, -1
  %46 = and i32 %42, %45
  store i32 %46, i32* %10, align 4
  %47 = load i32, i32* %7, align 4
  %48 = icmp slt i32 %47, 4
  %49 = zext i1 %48 to i32
  %50 = load i32, i32* %10, align 4
  %51 = or i32 %50, %49
  store i32 %51, i32* %10, align 4
  %52 = load i32, i32* %10, align 4
  store i32 %52, i32* %4, align 4
  br label %53

53:                                               ; preds = %36, %35
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i32 @pgprintk(i8*, i32, i32, i32) #1

declare dso_local i32 @offset_in_page(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
